Change code to jdk 1.8